[package]
name = "emjudge-judgenode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "4.4.1"
config = "0.13.4"
emjudge-judgecore = "0.1.7"
env_logger = "0.11.0"
futures = "0.3.30"
rusqlite = "0.30.0"
serde = "1.0.194"
serde_with = "3.4.0"
tokio = "1.35.1"


[dev-dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"

[features]
full = []
